Fix overflow

--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -132,8 +132,11 @@ table {
 
 html,
 body {
+  overflow-x: hidden;
+  width: 100vw;
   font-family: "Caveat", cursive;
   font-family: "Pacifico", cursive;
+  background-color: rgb(0, 0, 0, 0.8);
 }
 
 :root {
@@ -275,7 +278,7 @@ section {
 /* Section 2: Intro */
 
 #intro {
-  background-color: #81859628;
+  background-color: white;
 }
 
 #intro p {
